--- a/.docker/server/Dockerfile
+++ b/.docker/server/Dockerfile
@@ -1,15 +1,21 @@
-FROM denoland/deno:2.0.4
+FROM denoland/deno:2.1.7
 
+# The port that your application listens to.
+EXPOSE 1993
 
 WORKDIR /app
 
+# Prefer not to run as root.
+USER deno
+
+# Cache the dependencies as a layer (the following two steps are re-run only when deps.ts is modified).
+# Ideally cache deps.ts will download and compile _all_ external files used in main.ts.
+COPY deps.ts .
+RUN deno install --entrypoint deps.ts
+
+# These steps will be re-run upon each file change in your working directory:
 COPY . .
+# Compile the main app so that it doesn't need to be compiled each startup/entry.
+RUN deno cache main.ts
 
-RUN deno install
-RUN deno cache deps.ts
-
-EXPOSE 8000
-
-RUN chmod +x ./.docker/server/entrypoint.sh
-
-CMD deno task dev
+CMD ["deno", "run", "--allow-net", "--allow-read", "/app/lib/main.ts"]
