--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3.8'
-
 services:
   server:
     build:
       context: .
       dockerfile: ./.docker/server/Dockerfile
     ports:
-      - "8000:8000"
+      - "8001:8000"
     networks:
       - test_entretien
     volumes:
-      - ./lib:/app/lib
+      - ./lib:/app/lib,
+      - .:/app
+    command: ["deno", "run", "--allow-net", "--allow-read", "/app/lib/main.ts"]
 
 networks:
   test_entretien:
