--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno test && deno run --allow-net --allow-read --watch lib/main.ts"
+    "dev": "deno test && deno run --allow-net --allow-read --watch src/main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
