--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,5 @@
 {
   "tasks": {
-    "dev": "deno test && deno run --allow-net --allow-read --watch src/main.ts"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "react": "npm:react@^19.0.0"
+    "start": "deno run --allow-net --allow-read src/server.ts"
   }
 }
