--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,9 @@
+version: '3.8'
 services:
-  server:
-    build:
-      context: .
-      dockerfile: ./.docker/server/Dockerfile
+  app:
+    build: .
     ports:
-      - "8001:8000"
-    networks:
-      - test_entretien
+      - "8080:80"
     volumes:
-      - ./src:/app/src,
-      - .:/app
-    command: ["deno", "run", "--allow-net", "--allow-read", "/app/src/main.ts"]
-
-networks:
-  test_entretien:
+      - ./src:/usr/share/nginx/html
+      - ./static:/usr/share/nginx/html/static
